// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly hides playbar when a track is not provided 1`] = `
<section
  className="hidden"
>
  <div
    className="track"
  >
    <div
      className="image"
    >
      <img />
    </div>
    <div
      className="info"
    >
      <span
        className="info__title"
      />
      <span
        className="info__artists"
      />
    </div>
    <div
      className="track__controls"
    >
      <button
        className="btn"
        id="previous-btn"
        onClick={[Function]}
      >
        <svg>
          prev.svg
        </svg>
      </button>
      <button
        className="btn"
        disabled={false}
        id="play-btn"
        onClick={[Function]}
      >
        <svg>
          play.svg
        </svg>
      </button>
      <button
        className="btn"
        id="next-btn"
        onClick={[Function]}
      >
        <svg>
          next.svg
        </svg>
      </button>
    </div>
  </div>
</section>
`;

exports[`Correctly renders playbar with pause button when a playing track is provided 1`] = `
<section
  className="container"
>
  <div
    className="track"
  >
    <div
      className="image"
    >
      <img />
    </div>
    <div
      className="info"
    >
      <span
        className="info__title"
      />
      <span
        className="info__artists"
      />
    </div>
    <div
      className="track__controls"
    >
      <button
        className="btn"
        id="previous-btn"
        onClick={[Function]}
      >
        <svg>
          prev.svg
        </svg>
      </button>
      <button
        className="btn"
        disabled={false}
        id="pause-btn"
        onClick={[Function]}
      >
        <svg>
          pause.svg
        </svg>
      </button>
      <button
        className="btn"
        id="next-btn"
        onClick={[Function]}
      >
        <svg>
          next.svg
        </svg>
      </button>
    </div>
  </div>
</section>
`;

exports[`Correctly renders playbar with play button when a paused track is provided 1`] = `
<section
  className="container"
>
  <div
    className="track"
  >
    <div
      className="image"
    >
      <img />
    </div>
    <div
      className="info"
    >
      <span
        className="info__title"
      />
      <span
        className="info__artists"
      />
    </div>
    <div
      className="track__controls"
    >
      <button
        className="btn"
        id="previous-btn"
        onClick={[Function]}
      >
        <svg>
          prev.svg
        </svg>
      </button>
      <button
        className="btn"
        disabled={false}
        id="play-btn"
        onClick={[Function]}
      >
        <svg>
          play.svg
        </svg>
      </button>
      <button
        className="btn"
        id="next-btn"
        onClick={[Function]}
      >
        <svg>
          next.svg
        </svg>
      </button>
    </div>
  </div>
</section>
`;
